apps/cloud-demo/ingress/prod-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-demo-prod
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /prod(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: cloud-demo-prod
                port:
                  number: 80
